--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "groq-sdk": "^0.35.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.3",
     "multer": "^2.0.2",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "pdf-parse": "^2.4.5",
+    "zod": "^4.1.12"
   }
 }
